fix cat overlapping

--- a/app/assets/stylesheets/_typo.sass
+++ b/app/assets/stylesheets/_typo.sass
@@ -152,6 +152,6 @@ a
   &:hover, &:focus
     color: lighten( $bg-primary, 10)
 
-@for $i from 0 through 20
-  .w-(#{$i})
-    width: $i
+.cat-icon
+  width: 15px
+  display: inline-block
